[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>"]
description = "Rust idiomatic wrapper to libvpx"
keywords = ["vp9", "vp8", "webm", "video-encoder", "video-decoder"]
license = "MPL-2.0"
name = "vpx"
repository = "https://github.com/DiamondLovesYou/rust-vpx"
version = "0.3.0"

[dependencies]
libc = "0.2.20"

[dependencies.libvpx-native-sys]
path = "src/sys"

[lib]
name = "vpx"
path = "src/lib/lib.rs"
