[package]
authors = ["Richard Diamond <wichard@vitalitystudios.com>", "Kornel Lesiński <kornel@geekhood.net>"]
build = "build.rs"
description = "Rust bindings to libvpx"
license = "MPL-2.0"
name = "libvpx-native-sys"
repository = "https://github.com/DiamondLovesYou/rust-vpx"
version = "2.0.0"

[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
libc = "0.2.20"

[lib]
name = "vpx_sys"
path = "lib.rs"
